--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.sonika.nepstra">
-
+    <uses-sdk tools:overrideLibrary="com.paypal.android.sdk.payments" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,12 +10,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".DetailsActivity" />
         <activity android:name=".OrderedProducts" />
@@ -25,7 +28,8 @@
             android:parentActivityName=".CategoriesActivity" />
         <activity android:name=".categories_item" />
         <activity android:name=".Navigations.Womens" />
-
+        <activity android:name=".PaypalActivity" />
+        <activity android:name=".CheckoutActivity"></activity>
     </application>
 
 </manifest>
